@@ -4,6 +4,8 @@ AS OF SVN REV. 5091, WE ARE NOW USING TRUNK.  ALL UNTESTED BUGFIXES/FEATURES GO 
 IF YOU HAVE A WORKING AND TESTED BUGFIX PUT IT INTO STABLE AS WELL AS TRUNK.
 
 2010/07/27
+	* Rev. 14367 Implemented three new mercenary skills. [L0ne_W0lf]
+2010/07/27
 	* Rev. 14365 Updated npc_randomattack, it now does 100*skillevel percent damage. [L0ne_W0lf]
 	* Added patch from Paradox to allow a skill to use a random element for damage. See skill DB for info.
 2010/06/27
