@@ -1109,6 +1109,12 @@
 8235,3000,0,0,0,0
 //-- MER_LEXDIVINA
 8236,0,3000,0,30000:35000:40000:45000:50000:60000:60000:60000:60000:60000,0
+//-- MER_KYRIE
+8238,2000,2000,0,120000,0
+//-- MER_BLESSING
+8239,0,0,0,60000:80000:100000:120000:140000:160000:180000:200000:220000:240000,0
+//-- MER_INCAGI
+8240,1000,1000,0,60000:80000:100000:120000:140000:160000:180000:200000:220000:240000,0
 //==========================================
 
 //===== Guild Skills =======================
